github_data_collector/src/data/issue_comment/FaridSafi_react-native-gifted-chat.txt
#### Issue Description

Seems like there is some gap after keyboard close. Before and while keyboard showing, there is no gap.

1. Before keyboard shown
![Before Keyboard Shown](https://i.imgur.com/V0Ddwls.jpg)

2. Keyboard shown
![Keyboard Shown](https://i.imgur.com/sZLIXrY.jpg)

3. Keyboard hidden
![Keyboard Hidden](https://i.imgur.com/rv13Trd.jpg)

#### Steps to Reproduce / Code Snippets

```javascript
<SafeAreaView style={styles.androidSafeArea}>
    <GiftedChat
        messages={this.state.messages} 
        onSend={messages => this.onSend(messages)}
        user={{
        _id: 1,
        }} />
    <KeyboardAvoidingView behavior={'padding'} keyboardVerticalOffset={80}/>
</SafeAreaView>
```

#### Expected Results

There is no gap below the text input bar. Just like the 1st screenshot

#### Additional Information

* Nodejs version: 8
* React version: 16.9.0
* Expo React Native version: 36.0.0
* react-native-gifted-chat version: 0.13.0
* Platform(s) (iOS, Android, or both?): Android 9

#### Issue Description

So for the chat, i push to a new screen, this screen renders with all the messages and gifted-chat itself... without keyboard showing at first, but when the keyboard shows up, slides from right to left and kind of making an entire screen slide animation, so if I wrap my giftedChat with an ImageBackground, the ImageBackground also slides... and looks like a double screen push whenever I tap on a chat room.

How can I fix this undesirable effect?

#### Issue Description

Build fail with syntax error when I try to build on the web.
similar issue - https://github.com/FaridSafi/react-native-gifted-chat/issues/1083

#### Steps to Reproduce / Code Snippets

```
ERROR in ../node_modules/react-native-gifted-chat/lib/GiftedChat.js
Module build failed (from ../node_modules/babel-loader/lib/index.js):
SyntaxError: /Users/devmac/workspace/server/node_modules/react-native-gifted-chat/lib/GiftedChat.js: Unexpected token (333:26)

  331 |     renderMessages() {
  332 |         const { messagesContainerStyle, ...messagesContainerProps } = this.props;
> 333 |         const fragment = (<View style={[
      |                           ^
  334 |             {
  335 |                 height: this.state.messagesContainerHeight,
  336 |             },
    at Parser.raise (/Users/devmac/workspace/server/node_modules/@babel/parser/lib/index.js:6344:17)

```

#### Expected Results

build succeeded

#### Additional Information

* Nodejs version: v10.15.3
* React version: ^16.8.4
* React Native Web version: ^0.12.0-rc.1
* react-native-gifted-chat version: ^0.13.0
* Platform(s) (iOS, Android, or both?): web
* TypeScript version: ^3.2.2

#### Issue Description

This feature would be beneficial since we often want message bubbles to respond to touch. For example, if you tap a message on Facebook Messenger, the sent/delivered/read status is displayed below and the sent date is shown above the message. Right now, I've been able to implement this with gifted chat except one minor detail. I would like to add a touchable to the background so when I tap off the message I can hide the date and message status. The closest I've gotten so far is by adding a TouchableWithoutFeedback to the chat footer and setting the z-index to position it behind the message bubbles, but I couldn't figure out the right z-indices to get the touchable above the background but below the message bubbles.

I think it would be a good feature and add some flexibility to gifted chat. I would be open to attempting to implement this myself, if I get some good feedback/guidance here.
#### Issue Description

A have  a project uses `react-native-gifted-chat` dependency while adding to project using `yarn`
I produce error like that.

`[1/4] Resolving packages...
error Command failed.
Exit code: 1
Command: git
Arguments: pull
Directory: 
...
Output:
Updating f55c471..c909f64
error: Your local changes to the following files would be overwritten by merge:
        babel.config.js`


#### Additional Information

* Nodejs version: 12
* React version: 16.9
* React Native version: 36.0 (Expo)
* react-native-gifted-chat version: (0.14 - 0.13)
* Platform(s) : Android

#### Issue Description

When the keyboard is open on Android there's no space between the keyboard and the focused input. I haven't found any props that adds distance between the input and the keyboard.

#### Steps to Reproduce / Code Snippets

![Screen Shot 2020-01-15 at 8 34 07 AM](https://user-images.githubusercontent.com/16313465/72445742-d4db5000-3777-11ea-8c12-df384aa0d100.png)

#### Expected Results

Ability to add distance between input to account for the send button.

#### Additional Information

    System:
      OS: macOS 10.15.1
      Shell: 5.7.1 - /bin/zsh
    Binaries:
      Node: 12.6.0 - /usr/local/bin/node
      Yarn: 1.13.0 - /usr/local/bin/yarn
      npm: 6.13.0 - /usr/local/bin/npm
      Watchman: 4.9.0 - /usr/local/bin/watchman
    IDEs:
      Android Studio: 3.3 AI-182.5107.16.33.5199772
      Xcode: 11.3/11C29 - /usr/bin/xcodebuild
    npmPackages:
      expo: ^35.0.0 => 35.0.1 
      react: 16.8.3 => 16.8.3 
      react-native: https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz => 0.59.8 
    npmGlobalPackages:
      expo-cli: 3.11.2
#### Issue Description
We´re building a news distribution app, so the users gets alot of messages by the provider. When the Chat is opened the window scrolls to the bottom automatically. We would love to scroll to the first message that was not read yet by the customer. Is there a possibility to scroll to a specific message, by offset or maybe even id ? Important would be also that it scrolls to the beginning of the message since our news provider tends to send super long messages. Scrolling options could be by id of the messages or by a set offset or something.

#### Expected Results

The Chat scrolls to the beginning of a dedicated message.

#### Additional Information

* Nodejs version: 12.4.1
* React version: 16.12
* React Native version: 0.60
* react-native-gifted-chat version: 0.13
* Platform(s) (iOS, Android, or both?): both
* TypeScript version: 3.4.7

#### Issue Description

When not supplying image, the avatar is not rendered as initials  

#### Steps to Reproduce / Code Snippets

user : { avatar:null }

#### Expected Results

Render as initials

#### Additional Information

the bug is in this line in message.tsx

  ```
renderAvatar() {
  [...]
        if (currentMessage && currentMessage.user && currentMessage.user.avatar === null) {
            return null;
        }
  [...]
    }
```
This should be removed to solve the issue.

ps: I've forked, fixed but cannot build... 

The following enhancement would be great. Some Chat UI designs don't have image icon next to the bubble i.e. WhatsApp. Would be great to have some flexibility to show or hide bubble icon. 

how to load new messages received from backend without scroll to bottom ( keep scroll position ) so user can scroll to bottom manually or click to scroll to bottom component